--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a-scene arjs>
         <a-marker preset="hiro">
             <a-entity position="0 0 0" scale="0.1 0.1 0.1">
-              <a-sphere radius="5" color="blue"></a-sphere>
+              <a-sphere radius="5" color="red"></a-sphere>
             </a-sphere>
         </a-marker>
         <a-entity camera position="0 0 0"></a-entity>
