--- a/index.html
+++ b/index.html
@@ -9,11 +9,27 @@
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
 <body>
+
+<!-- AQUÍ EMPIEZA EL 3D  --> 
     <a-scene arjs>
-        <a-marker preset="hiro">
-            <a-entity position="0 0 0" scale="0.1 0.1 0.1">
+        <a-marker preset="hiro"> <!-- MARCADOR  --> 
+            
+        <a-entity position="0 0 0" scale="0.1 0.1 0.1">  <!--   -->
+            
+            <!-- ESFERA  
               <a-sphere radius="15" color="red"></a-sphere>
             </a-sphere>
+            <!-- FIN ESFERA  -->
+
+            <!-- OTRO MODELADO -->
+            <a-entity
+    position="0 0 0"
+    scale="1"
+    gltf-model="https://raw.githubusercontent.com/pedrovelasquez9/ARJS-example/main/tie.glb"
+></a-entity>
+<!-- FIN OTRO MODELADO -->
+
+
         </a-marker>
         <a-entity camera position="0 0 0"></a-entity>
     </a-scene>
