--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a-entity
     position="0 0 0"
     scale="1"
-    gltf-model="https://raw.githubusercontent.com/pedrovelasquez9/ARJS-example/main/tie.glb"
+    gltf-model="https://github.com/PolPendragon/polpendragon/blob/main/Shiba.gltf"
 ></a-entity>
 <!-- FIN OTRO MODELADO -->
 
