--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a-entity
     position="0 0 0"
     scale="1"
-    gltf-model="https://github.com/PolPendragon/polpendragon/blob/main/Shiba.gltf"
+    gltf-model="https://github.com/PolPendragon/polpendragon/blob/main/3dpea.com_Shiba.glb"
 ></a-entity>
 <!-- FIN OTRO MODELADO -->
 
