--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </a-sphere>
             <!-- FIN ESFERA  -->
 
-            <!-- OTRO MODELADO -->
+            <!-- OTRO MODELADO 
             <a-entity
     position="0 0 0"
     scale="1"
@@ -29,6 +29,14 @@
 ></a-entity>
 <!-- FIN OTRO MODELADO -->
 
+ <!-- OTRO MODELADO PRUEBA CUBO -->
+            <a-entity 
+    gltf-model="cubo.glb" 
+    position="0 1 -3" 
+    scale="1 1 1" 
+    rotation="0 45 0">
+  </a-entity>
+<!-- FIN OTRO PRUEBA CUBO -->
 
         </a-marker>
         <a-entity camera position="0 0 0"></a-entity>
