--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
             </a-sphere>
             <!-- FIN ESFERA  -->
 
-            <!-- OTRO MODELADO 
-            <a-entity
-    position="0 0 0"
-    scale="1"
-    gltf-model="https:/raw.githubusercontent.com/PolPendragon/polpendragon/blob/main/cubo.glb"
-></a-entity>
-<!-- FIN OTRO MODELADO -->
+            
+                                <!-- OTRO MODELADO -->
+                                <a-entity
+                        position="0 0 0"
+                        scale="1"
+                        gltf-model="https:/raw.githubusercontent.com/PolPendragon/polpendragon/main/cubo.glb"
+                    ></a-entity>
+                    <!-- FIN OTRO MODELADO -->
 
- <!-- OTRO MODELADO PRUEBA CUBO -->
+            
+ <!-- OTRO MODELADO PRUEBA CUBO
             <a-entity 
     gltf-model="cubo.glb" 
     position="0 1 -3" 
