--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
             <!-- FIN ESFERA  -->
 
             
-                                <!-- OTRO MODELADO -->
+                                <!-- CUBO-->
                                 <a-entity
                         position="0 0 0"
-                        scale="1"
+                        scale="5"
                         gltf-model="https:/raw.githubusercontent.com/PolPendragon/polpendragon/main/cubo.glb"
                     ></a-entity>
-                    <!-- FIN OTRO MODELADO -->
+                    <!-- CUBO FINAL -->
 
             
  <!-- OTRO MODELADO PRUEBA CUBO
