--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- AQUÍ EMPIEZA EL 3D  --> 
     <a-scene arjs>
         <a-marker preset="hiro"> <!-- MARCADOR  --> 
-            <a-entity position="0 0 0" scale="0.1 0.1 0.1">    
+            <!--<a-entity position="0 0 0" scale="0.1 0.1 0.1">   --> 
                 <!-- ESFERA
                       <a-sphere radius="15" color="red"></a-sphere>
                       </a-sphere>
