--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <!-- CUBO FINAL -->
                 
                 <!-- primitive box-->
-                    <a-entity geometry="primitive: box" material="color: red">
+                    <a-entity geometry="primitive: box" material="color: red" scale="1 1 1">
                 <!-- primitive box FINAL -->
 
             
