--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
                     <!-- CUBO FINAL -->
                 
                 <!-- primitive box-->
-                    <a-entity geometry="primitive: box" material="color: red" scale="5 5 5"></a-entity>
+                    <a-entity geometry="primitive: box" material="color: red" scale="1 5 1"></a-entity
+                    <a-torus color="#43A367" arc="270" radius="5" radius-tubular="0.1"></a-torus>
+
                 <!-- primitive box FINAL -->
 
             
