--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
            
         </a-marker> <!-- ESTO CIERRA TODO EL MARCADOR  -->
-        <a-entity camera position="0 0 0"></a-entity>
+       <!-- <a-entity camera position="0 0 0"></a-entity> -->
     </a-scene>
 </body>
 </html>
