--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <a-asset-item id="tree" src="tie.glb"></a-asset-item>
             </a-assets>
             <!-- use your gltf model -->
-            <a-entity gltf-model="##tree"></a-entity>
+            <a-entity gltf-model="#tree"></a-entity>
 
            
         </a-marker> <!-- ESTO CIERRA TODO EL MARCADOR  -->
