--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <!-- define your gltf asset -->
             <a-assets>
-              <a-asset-item id="tree" src="tie.glb"></a-asset-item>
+              <a-asset-item id="tree" src="https://raw.githubusercontent.com/PolPendragon/polpendragon/main/tie.glb"></a-asset-item>
             </a-assets>
             <!-- use your gltf model -->
             <a-entity gltf-model="#tree"></a-entity>
