--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
                  <!-- define your gltf asset -->
                 <a-assets>
-                  <a-asset-item id="tree" src="tie.glb"></a-asset-item>
+                  <a-asset-item id="tree" src="clap.glb"></a-asset-item>
                 </a-assets>
 
         <a-marker preset="hiro"> <!-- MARCADOR  --> 
