--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             
             <!-- use your gltf model -->
-            <a-entity gltf-model="#tree"></a-entity>
+            <a-entity gltf-model="#tree" position="0 0 0" rotation="90 0 0"></a-entity>
 
            
         </a-marker> <!-- ESTO CIERRA TODO EL MARCADOR  -->
