--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 
             
             <!-- use your gltf model -->
-            <a-entity gltf-model="#tree" position="0 0 0" rotation="90 0 0"></a-entity>
-
+           <!-- <a-entity gltf-model="#tree" position="0 0 0" rotation="90 0 0"></a-entity>-->
+            <a-entity fbx-model="src: url(clap2.fbx);">
+            </a-entity>
            
         </a-marker> <!-- ESTO CIERRA TODO EL MARCADOR  -->
        <!-- <a-entity camera position="0 0 0"></a-entity> -->
