--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                <!-- primitive box final-->
 
             
-            <!-- use your gltf model 
+            <!-- use your gltf model  -->
            <a-entity 
                    gltf-model="#tree" 
                    animation-mixer="loop: repeat" 
