--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                   <a-asset-item id="tree" src="clap.glb"></a-asset-item>
                 </a-assets>
 
-        <a-marker-camera type='pattern' patternUrl='Marker01.patt'></a-marker-camera>  <!-- MARCADOR  --> 
+        <a-marker type='pattern' patternUrl='Marker01.patt'></a-marker>  <!-- MARCADOR  --> 
        <!--  <a-marker preset="hiro"> MARCADOR  --> 
 
             <!--<a-entity position="0 0 0" scale="0.1 0.1 0.1">   --> 
