--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
 <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
 <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/three.js/build/ar-threex-location-only.js'></script>
 <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js'></script>
+
+```
+<!-- Enlazamos el archivo JavaScript basic.js -->
+<script type="text/javascript" src="basic.js"></script>  <!-- o "js/basic.js" si está en una subcarpeta -->
+
+```
+
 </head>
 <body>
 <a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
-    <a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
-    <a-entity material='color: red' geometry='primitive: box' gps-new-entity-place="latitude: 19.434933; longitude: -99.140724" scale="10 10 10"></a-entity>
-
+<a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
+<a-entity material='color: red' geometry='primitive: box' gps-new-entity-place="latitude: 19.434933; longitude: -99.140724" scale="10 10 10"></a-entity>
+    
 </a-scene>
 </body>
 </html>
