--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 <a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
 <a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
-<a-entity material='color: red' geometry='primitive: box' gps-new-entity-place="latitude: 19.434933; longitude: -99.140724" scale="10 10 10"></a-entity>
+<a-entity material='color: green' geometry='primitive: box' gps-new-entity-place="latitude: 19.434933; longitude: -99.140724" scale="10 10 10"></a-entity>
     
 </a-scene>
 </body>
