--- a/index.html
+++ b/index.html
@@ -1,58 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>AR.js GPS Cylinder</title>
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js"></script>
+<title>AR.js A-Frame Location-based</title>
+<script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/three.js/build/ar-threex-location-only.js'></script>
+<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js'></script>
+
+```
+<!-- Enlazamos el archivo JavaScript basic.js -->
+<script type="text/javascript" src="basic.js"></script>  <!-- o "js/basic.js" si está en una subcarpeta -->
+
+```
+
 </head>
 <body>
-    <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false">
-        <a-camera gps-new-camera="gpsMinDistance: 5"></a-camera>
-    </a-scene>
-    <script>
-        window.onload = () => {
-            let cylinderCreated = false;
-
-            const camera = document.querySelector("[gps-new-camera]");
-
-            // Escucha el evento de actualización de posición GPS
-            camera.addEventListener("gps-camera-update-position", (e) => {
-                console.log("GPS Position Update:", e.detail.position); // Mostrar posición en consola
-                if (!cylinderCreated) {
-                    const { latitude, longitude } = e.detail.position;
-
-                    // Calcular posición 1 metro al norte
-                    const northLatitude = latitude + 0.000009;
-
-                    console.log(`Original Lat: ${latitude}, Long: ${longitude}`);
-                    console.log(`New North Lat: ${northLatitude}, Long: ${longitude}`);
-
-                    // Crear el cilindro
-                    const cylinderEntity = document.createElement("a-entity");
-                    cylinderEntity.setAttribute("gps-new-entity-place", {
-                        latitude: northLatitude,
-                        longitude: longitude
-                    });
-                    cylinderEntity.setAttribute("geometry", {
-                        primitive: "cylinder",
-                        height: 2,
-                        radius: 0.5
-                    });
-                    cylinderEntity.setAttribute("material", { color: "blue" });
-                    cylinderEntity.setAttribute("scale", "1 1 1");
-
-                    console.log("Adding cylinder to scene...");
-                    document.querySelector("a-scene").appendChild(cylinderEntity);
-
-                    cylinderCreated = true; // Evitar crear más cilindros
-                }
-            });
-
-            // Si el GPS no está disponible, mostrar advertencia
-            camera.addEventListener("gps-camera-error", (error) => {
-                console.error("Error with GPS:", error);
-            });
-        };
-    </script>
+<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
+<a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
+<a-entity material='color: green' geometry='primitive: box' gps-new-entity-place="latitude: 19.434933; longitude: -99.140724" scale="10 10 10"></a-entity>
+    
+</a-scene>
 </body>
 </html>
