--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 </head>
 <body>
-
+<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
+<a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
 </body>
 </html>
