--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
   <body style="margin: 0px; overflow: hidden;">
     <a-scene embedded arjs>
       <a-marker preset="hiro">
-        <!-- Agregamos el cubo -->
-        <a-box 
-          position="0 0.5 0" 
-          rotation="0 45 0" 
-          color="#4CC3D9" 
-          depth="0.5" 
-          height="0.5" 
-          width="0.5">
-        </a-box>
+        <!-- Agregar el modelo OBJ -->
+        <a-entity
+          position="0 0 0"
+          scale="0.05 0.05 0.05"
+          obj-model="obj: url(https://example.com/path-to-your-model/rio-01.obj);"
+          material="color: #FF6347"
+        ></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
