--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
   <body style="margin: 0px; overflow: hidden;">
     <a-scene embedded arjs>
       <a-marker preset="hiro">
-        <!-- Agregar el modelo OBJ -->
-        <a-entity
-          position="0 0 0"
-          scale="0 0 0"
-          obj-model="obj: url(https://example.com/path-to-your-model/rio-01.obj);"
-          material="color: #FF6347"
-        ></a-entity>
+        <!-- Agregamos el cubo -->
+        <a-box 
+          position="0 0.5 0" 
+          rotation="0 45 0" 
+          color="#4CC3D9" 
+          depth="0.5" 
+          height="0.5" 
+          width="0.5">
+        </a-box>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
