--- a/index.html
+++ b/index.html
@@ -1,25 +1,19 @@
 <!DOCTYPE html>
 <html>
   <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+  <!-- we import arjs version without NFT but with marker + location based support -->
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <body style="margin: 0px; overflow: hidden;">
     <a-scene embedded arjs>
-      <!-- Definir el video como asset -->
-      <a-assets>
-        <video id="bola-video" src="bola01.mov" autoplay="true" loop="true" crossorigin="anonymous"></video>
-      </a-assets>
-
-      <!-- Marcador y video -->
       <a-marker preset="hiro">
-        <a-plane 
-          src="#bola-video" 
-          position="0 0 0" 
-          width="2" 
-          height="2">
-        </a-plane>
+        <!-- Agregar el modelo OBJ -->
+        <a-entity
+          position="0 0 0"
+          scale="0.05 0.05 0.05"
+          obj-model="obj: url(https://example.com/path-to-your-model/rio-01.obj);"
+          material="color: #FF6347"
+        ></a-entity>
       </a-marker>
-
-      <!-- Cámara -->
       <a-entity camera></a-entity>
     </a-scene>
   </body>
