--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <a-scene embedded arjs>
       <!-- Definir el video como asset -->
       <a-assets>
-        <video id="bola-video" src="bola01.mov" autoplay="true" loop="true" crossorigin="anonymous"></video>
+        <video id="bola-video" src="bola02.mp4" autoplay="true" loop="true" crossorigin="anonymous"></video>
       </a-assets>
 
       <!-- Marcador y video -->
