--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-  <!-- we import arjs version without NFT but with marker + location based support -->
-  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+  <head>
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+  </head>
   <body style="margin: 0px; overflow: hidden;">
     <a-scene embedded arjs>
+      <!-- Definir assets -->
+      <a-assets>
+        <a-asset-item id="rio-obj" src="rio-01.obj"></a-asset-item>
+        <a-asset-item id="rio-mtl" src="rio-01.mtl"></a-asset-item>
+      </a-assets>
+
+      <!-- Marcador y modelo -->
       <a-marker preset="hiro">
-        <!-- Agregar el modelo OBJ -->
-        <a-entity
-          position="0 0 0"
-          scale="0.05 0.05 0.05"
-          obj-model="obj: url(https://example.com/path-to-your-model/rio-01.obj);"
-          material="color: #FF6347"
-        ></a-entity>
+        <a-entity 
+          obj-model="obj: #rio-obj; mtl: #rio-mtl" 
+          position="0 0 0" 
+          scale="0.025 0.025 0.025">
+        </a-entity>
       </a-marker>
+
+      <!-- Cámara -->
       <a-entity camera></a-entity>
     </a-scene>
   </body>
