--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a-entity 
           obj-model="obj: #rio-obj; mtl: #rio-mtl" 
           position="0 0 0" 
+          rotation="0 180 0"
           scale="0.025 0.025 0.025">
         </a-entity>
       </a-marker>
