--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <a-entity 
           obj-model="obj: #rio-obj; mtl: #rio-mtl" 
           position="0 0 0" 
-          scale="0.1 0.1 0.1"
-          rotation="0 90 0">
+          scale="0.1 0.1 0.1">
         </a-entity>
       </a-marker>
 
