--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <a-scene embedded arjs>
       <!-- Definir assets -->
       <a-assets>
-        <a-asset-item id="rio-glb" src="./rio-05.glb"></a-asset-item>
+        <a-asset-item id="rio-glb" src="rio-05.glb"></a-asset-item>
       </a-assets>
 
       <!-- Marcador y modelo -->
@@ -16,7 +16,7 @@
         <a-entity 
           gltf-model="#rio-glb"
           position="0 0 0" 
-          scale="0.2 0.2 0.2"
+          scale="0.05 0.05 0.05"
           rotation="-90 0 0">
         </a-entity>
       </a-marker>
