--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <a-scene embedded arjs>
       <!-- Definir assets -->
       <a-assets>
-        <a-asset-item id="rio-glb" src="cuboverde.glb"></a-asset-item>
+        <a-asset-item id="rio-glb" src="rio-05.glb"></a-asset-item>
       </a-assets>
 
       <!-- Marcador y modelo -->
