--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-  </head>
-  <body style="margin: 0px; overflow: hidden;">
-    <a-scene embedded arjs>
-      <!-- Definir assets -->
-      <a-assets>
-        <a-asset-item id="rio-glb" src="rio-05.glb"></a-asset-item>
-      </a-assets>
+<head>
+<script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+</head>
+<body style="margin: 0px; overflow: hidden;">
+<a-scene embedded arjs>
+<!-- Definir assets -->
+<a-assets>
+<a-asset-item id="rio-obj" src="rio-01.obj"></a-asset-item>
+<a-asset-item id="rio-mtl" src="rio-01.mtl"></a-asset-item>
+</a-assets>
 
-      <!-- Marcador y modelo -->
-      <a-marker preset="hiro">
-        <a-entity 
-          gltf-model="#rio-glb"
-          position="0 0 0" 
-          scale="0.1 0.1 0.1"
-          rotation="-90 0 0">
-        </a-entity>
-      </a-marker>
 
-      <!-- Cámara -->
-      <a-entity camera></a-entity>
-    </a-scene>
-  </body>
+  <!-- Marcador y modelo -->
+  <a-marker preset="hiro">
+    <a-entity
+      obj-model="obj: #rio-obj; mtl: #rio-mtl"
+      position="0 0 0"
+      scale="0.1 0.1 0.1"
+      rotation="-90 0 0">
+    </a-entity>
+  </a-marker>
+
+  <!-- Cámara -->
+  <a-entity camera></a-entity>
+</a-scene>
+
+
+</body>
 </html>
