--- a/index.html
+++ b/index.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+  <!-- Scripts necesarios -->
+  <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+  <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/three.js/build/ar-threex-location-only.js'></script>
+  <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js'></script>
 </head>
 <body style="margin: 0px; overflow: hidden;">
-<a-scene embedded arjs>
-<!-- Definir assets -->
-<a-assets>
-<a-asset-item id="rio-obj" src="rio-01.obj"></a-asset-item>
-<a-asset-item id="rio-mtl" src="rio-01.mtl"></a-asset-item>
-</a-assets>
+  <a-scene 
+    embedded 
+    arjs="sourceType: webcam; debugUIEnabled: false; locationEnabled: true;"
+    gps-camera="positionMinAccuracy: 20;">
+    
+    <!-- Definir assets -->
+    <a-assets>
+      <a-asset-item id="rio-obj" src="rio-01.obj"></a-asset-item>
+      <a-asset-item id="rio-mtl" src="rio-01.mtl"></a-asset-item>
+    </a-assets>
 
-
-  <!-- Marcador y modelo -->
-  <a-marker preset="hiro">
+    <!-- Modelo ubicado al norte del usuario -->
     <a-entity
+      gps-entity-place="latitude: 0; longitude: 0"
       obj-model="obj: #rio-obj; mtl: #rio-mtl"
       position="0 0 0"
       scale="0.1 0.1 0.1"
       rotation="-90 0 0">
     </a-entity>
-  </a-marker>
 
-  <!-- Cámara -->
-  <a-entity camera></a-entity>
-</a-scene>
-
-
+    <!-- Cámara con GPS -->
+    <a-entity camera gps-camera rotation-reader></a-entity>
+  </a-scene>
 </body>
 </html>
