--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     arjs="sourceType: webcam; debugUIEnabled: false; locationEnabled: true;"
     gps-camera="positionMinAccuracy: 20;">
     
-    <!-- Cargar y mostrar el modelo cuboverde.glb -->
+    <!-- Cargar y mostrar el modelo cuboverde.glb alejado -->
     <a-entity
       gps-entity-place="latitude: 0; longitude: 0" 
       gltf-model="cuboverde.glb"
+      position="0 0 -10" <!-- Alejado en el eje Z -->
       scale="1 1 1">
     </a-entity>
 
