--- a/index.html
+++ b/index.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!-- Scripts necesarios -->
   <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-  <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/three.js/build/ar-threex-location-only.js'></script>
-  <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js'></script>
+  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
 <body style="margin: 0px; overflow: hidden;">
-  <a-scene 
-    embedded 
-    arjs="sourceType: webcam; debugUIEnabled: false; locationEnabled: true;"
-    gps-camera="positionMinAccuracy: 20;">
-    
-    <!-- Cargar y mostrar el modelo cuboverde.glb alejado -->
-    <a-entity
-      gps-entity-place="latitude: 0; longitude: 0" 
-      gltf-model="cuboverde.glb"
-      position="0 0 -10" <!-- Alejado en el eje Z -->
-      scale="1 1 1">
-    </a-entity>
+  <a-scene embedded arjs>
+    <!-- Mostrar el modelo curva01.glb -->
+    <a-marker preset="hiro">
+      <a-entity 
+        gltf-model="curva01.glb" 
+        position="0 0 0" 
+        scale="1 1 1" 
+        rotation="0 0 0">
+      </a-entity>
+    </a-marker>
 
-    <!-- Cámara con GPS -->
-    <a-entity camera gps-camera rotation-reader></a-entity>
+    <!-- Cámara -->
+    <a-entity camera></a-entity>
   </a-scene>
 </body>
 </html>
