--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <a-entity 
         gltf-model="curva01.glb" 
         position="0 0 0" 
-        scale="1 1 1" 
-        rotation="0 0 0">
+        scale="0.05 0.05 0.05">
+        
       </a-entity>
     </a-marker>
 
