--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Mostrar el modelo curva01.glb -->
     <a-marker preset="hiro">
       <a-entity 
-        gltf-model="cuboverde.glb" 
+        gltf-model="mapa-01.glb" 
         position="0 0 0" 
         scale="0.05 0.05 0.05">
         
