--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <a-marker preset="hiro">
       <a-entity 
         gltf-model="mapa-02.glb" 
-        position="-1 0 0" 
-        scale="2 2 2">
+        position="-.5 0 0" 
+        scale="3 3 3">
         
       </a-entity>
     </a-marker>
