--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <a-marker preset="hiro">
       <a-entity 
         gltf-model="mapa-02.glb" 
-        position="-.005 0 0" 
-        scale="7 7 7">
+        position="-.005 0 -.005" 
+        scale="5 5 5">
         
       </a-entity>
     </a-marker>
