--- a/index.html
+++ b/index.html
@@ -3,21 +3,63 @@
 <head>
   <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+  <style>
+    .ui-container {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      gap: 10px;
+    }
+
+    .ui-button {
+      background-color: #007BFF;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      font-size: 16px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .ui-button:hover {
+      background-color: #0056b3;
+    }
+  </style>
 </head>
 <body style="margin: 0px; overflow: hidden;">
   <a-scene embedded arjs>
     <!-- Mostrar el modelo curva01.glb -->
     <a-marker preset="hiro">
       <a-entity 
+        id="mapa"
         gltf-model="mapa-02.glb" 
-        position="-.005 0 -.005" 
-        scale="5 5 5">
-        
+        position="-.005 0 0" 
+        scale="10 10 10">
       </a-entity>
     </a-marker>
 
     <!-- Cámara -->
     <a-entity camera></a-entity>
   </a-scene>
+
+  <!-- Controles de escala -->
+  <div class="ui-container">
+    <button class="ui-button" onclick="adjustScale(1.1)">Aumentar</button>
+    <button class="ui-button" onclick="adjustScale(0.9)">Reducir</button>
+  </div>
+
+  <script>
+    function adjustScale(factor) {
+      const mapa = document.querySelector('#mapa');
+      const currentScale = mapa.getAttribute('scale');
+      mapa.setAttribute('scale', {
+        x: currentScale.x * factor,
+        y: currentScale.y * factor,
+        z: currentScale.z * factor
+      });
+    }
+  </script>
 </body>
 </html>
