--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
 
     .ui-button {
-      background-color: #007BFF;
+      background-color: #cfe2eb;
       color: white;
       border: none;
       padding: 10px 20px;
@@ -24,7 +24,7 @@
     }
 
     .ui-button:hover {
-      background-color: #0056b3;
+      background-color: #a7b6bc;
     }
   </style>
 </head>
