--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
 
     .ui-button {
-      background-color: #007BFF;
+      background-color: #a7b6bc;
       color: white;
       border: none;
       padding: 10px 20px;
@@ -24,7 +24,7 @@
     }
 
     .ui-button:hover {
-      background-color: #0056b3;
+      background-color: #cfe2eb;
     }
 
     .top-images {
@@ -33,7 +33,7 @@
       width: 100%;
       display: flex;
       justify-content: space-between;
-      padding: 0 20px;
+      padding: 0 10px;
     }
 
     .top-images img {
