--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
 
     .ui-button {
-      background-color: #a7b6bc;
+      background-color: #007BFF;
       color: white;
       border: none;
       padding: 10px 20px;
@@ -24,7 +24,7 @@
     }
 
     .ui-button:hover {
-      background-color: #cfe2eb;
+      background-color: #0056b3;
     }
 
     .top-images {
@@ -33,11 +33,11 @@
       width: 100%;
       display: flex;
       justify-content: space-between;
-      padding: 0 10px;
+      padding: 0 20px;
     }
 
     .top-images img {
-      max-width: 50px;
+      max-width: 70px;
       height: auto;
     }
   </style>
@@ -50,7 +50,7 @@
         id="mapa"
         gltf-model="mapa-02.glb" 
         position="-.005 0 0" 
-        scale="7 7 7">
+        scale="10 10 10">
       </a-entity>
     </a-marker>
 
