--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     }
 
     .top-images img {
-      max-width: 70px;
+      width: 100px;
       height: auto;
     }
   </style>
@@ -66,8 +66,8 @@
 
   <!-- Imágenes informativas en la parte superior -->
   <div class="top-images">
-    <img src="TE-blanco.png" alt="TE Blanco">
-    <img src="mbm-bl.png" alt="MBM Blanco">
+    <img src="TE-blanco.png" alt="TE Blanco" style="margin-left: 0;">
+    <img src="mbm-bl.png" alt="MBM Blanco" style="margin-right: 0;">
   </div>
 
   <script>
