--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
       top: 10px;
       width: 100%;
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       padding: 0 20px;
     }
 
     .top-images img {
-      width: 100px;
+      width: 120px;
       height: auto;
     }
   </style>
@@ -64,10 +64,9 @@
     <button class="ui-button" onclick="adjustScale(0.9)">Reducir</button>
   </div>
 
-  <!-- Imágenes informativas en la parte superior -->
+  <!-- Imagen informativa en el centro superior -->
   <div class="top-images">
-    <img src="TE-blanco.png" alt="TE Blanco" style="margin-left: 0;">
-    <img src="mbm-bl.png" alt="MBM Blanco" style="margin-right: 0;">
+    <img src="mbm-bl.png" alt="MBM Blanco">
   </div>
 
   <script>
