--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
 
     .ui-button {
-      background-color: #007BFF;
+      background-color: #cfe2eb;
       color: white;
       border: none;
       padding: 10px 20px;
@@ -24,7 +24,7 @@
     }
 
     .ui-button:hover {
-      background-color: #0056b3;
+      background-color: #a7b6bc;
     }
 
     .top-images {
@@ -50,7 +50,7 @@
         id="mapa"
         gltf-model="mapa-02.glb" 
         position="-.005 0 0" 
-        scale="10 10 10">
+        scale="7 7 7">
       </a-entity>
     </a-marker>
 
