--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
       width: 100%;
       display: flex;
       justify-content: center;
-      padding: 0 20px;
+      align-items: center;
     }
 
     .top-images img {
       width: 120px;
       height: auto;
+      margin: 0 auto;
     }
   </style>
 </head>
