--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 </head>
 <body style="margin: 0px; overflow: hidden;">
   <a-scene embedded arjs>
-    <!-- Mostrar el modelo curva01.glb -->
+    <!-- Mostrar el modelo cdmx.glb -->
     <a-marker preset="hiro">
       <a-entity 
         id="mapa"
-        gltf-model="mapa-03.glb" 
+        gltf-model="cdmx.glb" 
         position="-.005 0 0" 
         scale="7 7 7">
       </a-entity>
