--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
 
     .ui-button {
-      background-color: #cfe2eb;
+      background-color: #919ea3;
       color: white;
       border: none;
       padding: 10px 20px;
@@ -24,7 +24,7 @@
     }
 
     .ui-button:hover {
-      background-color: #a7b6bc;
+      background-color: #737c7f;
     }
 
     .top-images {
@@ -50,7 +50,7 @@
       <a-entity 
         id="mapa"
         gltf-model="cdmx.glb" 
-        position="0 0 0" 
+        position=".005 0 0" 
         scale="7 7 7">
       </a-entity>
     </a-marker>
