--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <a-entity 
         id="mapa"
         gltf-model="cdmx.glb" 
-        position=".-5 0 0" 
+        position="-.5 0 -.5" 
         scale="7 7 7">
       </a-entity>
     </a-marker>
