--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       <a-entity 
         id="mapa"
         gltf-model="cdmx.glb" 
-        position="-.95 0 .85" 
-        scale="8 8 8">
+        position="-1 0 1" 
+        scale="10 10 10">
       </a-entity>
     </a-marker>
 
