--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body style="margin: 0px; overflow: hidden;">
   <a-scene embedded arjs>
     <!-- Mostrar el modelo cdmx.glb -->
-    <a-marker preset="kanji">
+    <a-marker preset="hiro">
       <a-entity 
         id="mapa"
         gltf-model="cdmx.glb" 
